--- a/GraphicalIDE/.classpath
+++ b/GraphicalIDE/.classpath
@@ -3,12 +3,12 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/reflections-0.9.9-RC1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/Guava/guava-18.0.jar" sourcepath="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/Guava/guava-18.0-sources.jar">
+	<classpathentry kind="lib" path="C:/Users/s-kadams/workspace/reflections-0.9.9-RC1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/s-kadams/workspace/guava-18.0.jar" sourcepath="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/Guava/guava-18.0-sources.jar">
 		<attributes>
 			<attribute name="javadoc_location" value="jar:file:/C:/Users/Kyran%20Adams/Desktop/Coding%20Stuff/Java/workspace/Guava/guava-18.0-javadoc.jar!/"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/javaassist/javassist.jar" sourcepath="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/javaassist/javassist-rel_3_19_0_ga.zip"/>
+	<classpathentry kind="lib" path="C:/Users/s-kadams/workspace/javassist.jar" sourcepath="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/javaassist/javassist-rel_3_19_0_ga.zip"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
