--- a/GraphicalIDE/.classpath
+++ b/GraphicalIDE/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="res"/>
+	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="lib" path="C:/Users/s-kadams/workspace/reflections-0.9.9-RC1.jar"/>
 	<classpathentry kind="lib" path="C:/Users/s-kadams/workspace/guava-18.0.jar" sourcepath="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/Guava/guava-18.0-sources.jar">
