--- a/GraphicalIDE/.classpath
+++ b/GraphicalIDE/.classpath
@@ -4,12 +4,7 @@
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="lib" path="C:/Users/s-kadams/workspace/guava-18.0.jar" sourcepath="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/Guava/guava-18.0-sources.jar">
-		<attributes>
-			<attribute name="javadoc_location" value="jar:file:/C:/Users/Kyran%20Adams/Desktop/Coding%20Stuff/Java/workspace/Guava/guava-18.0-javadoc.jar!/"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/s-kadams/workspace/javassist.jar" sourcepath="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/javaassist/javassist-rel_3_19_0_ga.zip"/>
+	<classpathentry kind="lib" path="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/javaassist/javassist.jar" sourcepath="C:/Users/Kyran Adams/Desktop/Coding Stuff/Java/workspace/javaassist/javassist-rel_3_19_0_ga.zip"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
